fix bug layout broken

--- a/components/tasksFilter/taskFilter.module.less
+++ b/components/tasksFilter/taskFilter.module.less
@@ -13,10 +13,26 @@
     margin: 0 -7.5px;
 }
 
+.list_category {
+    margin: 0 10px;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
 .item_filter {
     padding: 0 7.5px;
+    margin-bottom: 15px;
     &_label {
         margin-bottom: 5px;
         font-weight: 600;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .list_category {
+        display: none;
     }
 }
